log
Thu 20 Apr 2023 04:42:09 PM UTC: 
 tests:  1|8
total_score: 0/70
4ac5d40
Thu 20 Apr 2023 04:50:36 PM UTC: 
 treemap.c | 6 ++++--
 1 file changed, 4 insertions(+), 2 deletions(-)
 tests:  4|7
total_score: 5/70
5b2d0f6
Thu 20 Apr 2023 04:56:43 PM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
treemap.c: In function ‘searchTreeMap’:
treemap.c:76:1: error: control reaches end of non-void function [-Werror=return-type]
   76 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
4e1b431
Thu 20 Apr 2023 05:08:19 PM UTC: 
 treemap.c | 21 ++++++++++++++++++++-
 1 file changed, 20 insertions(+), 1 deletion(-)
 tests:  11|6
total_score: 15/70
811dd39
Thu 20 Apr 2023 05:21:02 PM UTC: 
 treemap.c | 41 +++++++++++++++++++++++++++++++++++++++++
 1 file changed, 41 insertions(+)
 tests:  11|6
total_score: 15/70
bd86a8f
Thu 20 Apr 2023 05:21:37 PM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  11|6
total_score: 15/70
8fc27c1
